= Version 0.8.0

  * [API] AMQP::Channel#recover now takes (an optional) callback that is fired when
          basic.recover-ok is received.
  * [API] AMQP::Frame is gone.
  * [API] AMQP::Buffer is gone. Serialization & framing are now handled primarily by amq-protocol.
  * [FEATURE] AMQP gem is now AMQP 0.9.1 compatible: it runs atop of amq-client gem
  * [API] AMQP::Queue#publish is deprecated.

= Version 0.7.1

  * [BUG] AMQP gem no longer defines top-level BlankSlate class to avoid conflicts with Builder 2.x.
  * [API] AMQP::Exchange.default no longer caches exchange object between calls
          because it may lead to very obscure issues when channel that exchange was
	  using is closed (due to connection loss, as part of test suite teardown
	  or in any other way).

  * [API] AMQP::Exchange.default now accepts channel as a parameter.
  * [API] AMQP::Exchange#channel
  * [BUG] Basic.Return is not supported by amqp gem yet, but it should not result in obscure exceptions
  * [API] AMQP::Exchange#publish now supports content type overriding.
  * [API] Introduce AMQP::Exchange #durable?, #transient?, #auto_deleted? and #passive?
  * [API] Introduce AMQP::Channel#open?
  * [BUG] AMQP connection was considered established prematurely.
  * [API] MQ.logging is removed; please use AMQP.logging from now on.
  * [API] MQ::Queue class is deprecated; please use AMQP::Queue from now on.
  * [API] MQ::Exchange class is deprecated; please use AMQP::Exchange from now on.
  * [API] MQ class is deprecated; please use AMQP::Channel from now on.
  * [API] require "mq" is deprecated; please use require "amqp" from now on.


= Version 0.7
  * [BUG] Sync API for queues and exchanges, support for server-generated queues & exchange names (via semi-lazy collection).
  * [BUG] Sync API for MQ#close (Channel.Close) [issue #34].
  * [FEATURE] AMQP URL from majek's fork, with some fixes. Example: AMQP.start("amqps://")
  * [DEVELOP] Added some em-spec-based specs, bin/irb, Gemfile.